--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <img src="img/intel-header-logo.svg" alt="Intel Logo" />
       <!-- Main Heading -->
       <h1>
-        Sustainability Through the Ages
+        Sustainability Through the Ages!
       </h1>
 
       <!-- Subheading / Description -->
