--- a/index.html
+++ b/index.html
@@ -8,23 +8,20 @@
 </head>
 <body>
 
+  <!-- Intel logo in the top left corner -->
+  <img src="img/intel-header-logo.svg" alt="Intel Logo" class="intel-logo" />
+
   <!-- Header / Hero Section -->
   <header>
-    <div>
-      <!-- Ask Copilot to teach you about `.svg` 🙂 -->
-      <img src="img/intel-header-logo.svg" alt="Intel Logo" />
-      <!-- Main Heading -->
-      <h1>
-        Sustainability Through the Ages!
-      </h1>
-
-      <!-- Subheading / Description -->
-      <p>
-        Explore Intel's journey through time, discovering how our commitment
-        to innovation has shaped a more sustainable future for technology 
-        and our planet.
-      </p>
-    </div>
+    <!-- Main Heading and Subheading centered -->
+    <h1>
+      Sustainability Through the Ages!
+    </h1>
+    <p>
+      Explore Intel's journey through time, discovering how our commitment
+      to innovation has shaped a more sustainable future for technology 
+      and our planet.
+    </p>
   </header>
 
   <!-- Timeline Cards Section -->
