--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header>
     <!-- Main Heading and Subheading centered -->
     <h1>
-      Sustainability Through the Ages!
+      Sustainability Through the Ages! yup!
     </h1>
     <p>
       Explore Intel's journey through time, discovering how our commitment
