--- a/index.html
+++ b/index.html
@@ -7,134 +7,56 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
-  <!-- Intel logo in the top left corner -->
-  <img src="img/intel-header-logo.svg" alt="Intel Logo" class="intel-logo" />
-
-  <!-- Header / Hero Section -->
-  <header>
-    <!-- Main Heading and Subheading centered -->
-    <h1>
-      Sustainability Through the Ages! yup!
-    </h1>
+  <!-- Hero Section with Intel logo and heading -->
+  <div class="hero">
+    <!-- Intel logo centered at the top -->
+    <img src="img/intel-header-logo.svg" alt="Intel Logo" class="hero-logo" />
+    <h1>SUSTAINABILITY<br>THROUGH THE AGES</h1>
+    <hr class="hero-underline" />
     <p>
-      Explore Intel's journey through time, discovering how our commitment
-      to innovation has shaped a more sustainable future for technology 
-      and our planet.
+      Explore Intel's journey through time, discovering how our<br>
+      commitment to innovation has shaped a more sustainable future<br>
+      for technology and our planet.
     </p>
-  </header>
+  </div>
 
   <!-- Timeline Cards Section -->
-  <section>
-
+  <div class="timeline">
     <!-- Card 1: 1968 -->
-    <div>
-      <h2>1968</h2>
-      <h3>Intel Founded</h3>
-      <img src="img/1.jpg" alt="Placeholder Image" />
-      <p>
-        Robert Noyce and Gordon Moore rename the newly formed company 
-        NM Electronics to Intel Corporation, laying the foundation for 
-        decades of technological innovation.
-      </p>
+    <div class="card">
+      <div class="card-header">
+        <span class="card-year">1968</span>
+        <span class="card-title">Intel Founded</span>
+      </div>
+      <img src="img/1.jpg" alt="Intel Founded" />
     </div>
 
     <!-- Card 2: 1971 -->
-    <div>
-      <h2>1971</h2>
-      <h3>First Microprocessor</h3>
-      <img src="img/2.jpg" alt="Placeholder Image" />
-      <p>
-        Intel debuts the 4004, the world's first commercial microprocessor, 
-        igniting the microprocessor revolution and propelling the future 
-        of computing devices.
-      </p>
+    <div class="card">
+      <div class="card-header">
+        <span class="card-year">1971</span>
+        <span class="card-title">First Microprocessor</span>
+      </div>
+      <img src="img/2.jpg" alt="First Microprocessor" />
     </div>
 
     <!-- Card 3: 1978 -->
-    <div>
-      <h2>1978</h2>
-      <h3>8086 Processor</h3>
-      <img src="img/3.jpg" alt="Placeholder Image" />
-      <p>
-        Launch of the 8086 processor, establishing the x86 architecture 
-        that drives countless PCs and servers in the modern era.
-      </p>
+    <div class="card">
+      <div class="card-header">
+        <span class="card-year">1978</span>
+        <span class="card-title">8086 Processor</span>
+      </div>
+      <img src="img/3.jpg" alt="8086 Processor" />
     </div>
 
-    <!-- Card 4: 1985 -->
-    <div>
-      <h2>1985</h2>
-      <h3>386 Processor</h3>
-      <img src="img/4.jpg" alt="Placeholder Image" />
-      <p>
-        Intel introduces the 386 processor with 32-bit architecture, 
-        ushering in a new era of performance and multitasking for 
-        personal computers.
-      </p>
+    <!-- Card 4: 1985 (with text overlay on hover) -->
+    <div class="card card-detail">
+      <div class="card-detail-text">
+        Intel introduces the 386 processor with 32-bit architecture, ushering in a new era of performance and multitasking for personal computers.
+      </div>
+      <img src="img/4.jpg" alt="386 Processor" />
     </div>
-
-    <!-- Card 5: 2006 -->
-    <div>
-      <h2>2006</h2>
-      <h3>Peak GHG Emissions</h3>
-      <img src="https://placehold.co/250x100" alt="Placeholder Image" />
-      <p>
-        This year marks Intel's highest annual greenhouse gas emissions 
-        for operations. Over subsequent years, Intel invests heavily in 
-        chemical abatement, renewable energy, and energy-efficient 
-        manufacturing to reverse this trend.
-      </p>
-    </div>
-
-    <!-- Card 6: 2020 -->
-    <div>
-      <h2>2020</h2>
-      <h3>RISE Strategy</h3>
-      <img src="https://placehold.co/250x100" alt="Placeholder Image" />
-      <p>
-        Intel launches its RISE (Responsible, Inclusive, Sustainable, 
-        Enabling) strategy and 2030 goals, aiming to drive industry-wide 
-        progress on climate action, water stewardship, and waste reduction.
-      </p>
-    </div>
-
-    <!-- Card 7: 2022 -->
-    <div>
-      <h2>2022</h2>
-      <h3>Net-Zero By 2040</h3>
-      <img src="https://placehold.co/250x100" alt="Placeholder Image" />
-      <p>
-        Intel announces its commitment to achieve net-zero greenhouse 
-        gas emissions (Scope 1 and 2) across its global operations 
-        by 2040, building on years of environmental initiatives.
-      </p>
-    </div>
-
-    <!-- Card 8: 2023 -->
-    <div>
-      <h2>2023</h2>
-      <h3>Renewable Electricity</h3>
-      <img src="https://placehold.co/250x100" alt="Placeholder Image" />
-      <p>
-        The company achieves 99% renewable electricity usage worldwide, 
-        helping to drastically lower carbon emissions and driving progress 
-        toward Intel's long-term sustainability goals.
-      </p>
-    </div>
-
-    <!-- Card 9: 2024 -->
-    <div>
-      <h2>2024</h2>
-      <h3>Sustainability Summit</h3>
-      <img src="https://placehold.co/250x100" alt="Placeholder Image" />
-      <p>
-        Intel hosts its first Sustainability Summit, uniting suppliers, 
-        government officials, and industry leaders to collaborate on 
-        next-generation sustainable semiconductor manufacturing.
-      </p>
-    </div>
-  </section>
-  <p>Scroll to view timeline | Hover over cards to learn more!</p>
+  </div>
+  <p class="timeline-hint">Scroll to view timeline | Hover over cards to learn more!</p>
 </body>
 </html>
