--- a/index.html
+++ b/index.html
@@ -49,12 +49,11 @@
       <img src="img/3.jpg" alt="8086 Processor" />
     </div>
 
-    <!-- Card 4: 1985 (with text overlay on hover) -->
+    <!-- Card 4: 1985 (blue card, no image) -->
     <div class="card card-detail">
       <div class="card-detail-text">
         Intel introduces the 386 processor with 32-bit architecture, ushering in a new era of performance and multitasking for personal computers.
       </div>
-      <img src="img/4.jpg" alt="386 Processor" />
     </div>
   </div>
   <p class="timeline-hint">Scroll to view timeline | Hover over cards to learn more!</p>
